test_programs/typing/ptr_in_func.tip
f(x) {
    *x = 10;
    return x;
}

main() {
    var n, x;

    n = 10;
    x = f(n);   // expected-error{{Cannot pass "Int" to function expecting "Pointer(Unbound(3))"}}
    return n;
}
